# RentRank-NYC

./: .env.example  .gitignore  README.md  pyproject.toml
apartment_search/: cli.py  diligence.py  init_wizard.py  models.py  outreach.py  pipeline.py  preferences.py  scoring.py  sheets.py  workspace.py
apartment_search/providers/: rapidapi_realty.py
config/: preferences.example.json  workspace.example.json
tests/: test_pipeline_components.py
